# Django-para-Profissional

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytets.ini
.github/workflows/: blank.yml
contrib/: env-sample
dev/: settings.py  urls.py
dev/base/: apps.py  tests.py  urls.py  views.py
