[tool.poetry]
name = "django-para-profissional"
version = "0.1.0"
description = "Um projeto Django para profissionais"
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "devpro" }
]

[tool.poetry.dependencies]
python = "^3.11.6"
django = "^5.1"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
sentry-sdk = "^2.12.0"
python-decouple = "^3.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.5"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 120
exclude = ['./devpro/migrations']

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR2004"]

[tool.ruff.format]
quote-style = 'single'

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
start = "python manage.py runserver"
migrate = "python manage.py migrate"
pre_test = "task lint"
test = "pytest devpro/ -s -x --cov=devpro -vv"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
